@@ -43,7 +43,7 @@ import java.util.*;
  * BlogCalendar
  *
  * @author Mark Lussier
- * @version $Id: BlogCalendar.java,v 1.15 2003-04-04 01:44:21 czarneckid Exp $
+ * @version $Id: BlogCalendar.java,v 1.16 2003-05-03 18:01:24 intabulas Exp $
  */
 public class BlogCalendar {
 
@@ -133,7 +133,7 @@ public class BlogCalendar {
      * @param dom the day of the month
      */
     public void setEntryForDOM(int dom) {
-        _dayswithentry[dom - 1] = new Boolean(true);
+        _dayswithentry[dom - 1] = Boolean.valueOf(true);
     }
 
     /**
@@ -142,7 +142,7 @@ public class BlogCalendar {
      * @param dom the day of the month
      */
     public void removetEntryForDOM(int dom) {
-        _dayswithentry[dom - 1] = new Boolean(false);
+        _dayswithentry[dom - 1] = Boolean.valueOf(false);
     }
 
     /**
